--- a/compose.yml
+++ b/compose.yml
@@ -26,6 +26,7 @@ services:
       REDIS_URL: "redis://subscription_redis:6379"
       ADDRESS: 0.0.0.0
       PORT: 8080
+      ENVIRONMENT: "development"
     ports:
       - "8080:8080"
     depends_on:
