added new environment variable

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ ADDRESS=0.0.0.0
 PORT=8080
 SECRET="asdfdf-fdsadfgr-dfsadfk-gadhakl" #whatever
 REDIS_URL="redis://subscription_redis:6379"
+ENVIRONMENT="development"
