--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ PORT=8080
 SECRET="asdfdf-fdsadfgr-dfsadfk-gadhakl" #whatever
 REDIS_URL="redis://subscription_redis:6379"
 ENVIRONMENT="development"
+DYNAMO_DB_TABLE_NAME="subscription_app_development"
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
