--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 ADDRESS=0.0.0.0
 PORT=8080
-SECRET="asdfdf-fdsadfgr-dfsadfk-gadhakl" #whatever
+JWT_SECRET_KEY="asdfdf-fdsadfgr-dfsadfk-gadhakl" #whatever
 REDIS_URL="redis://subscription_redis:6379"
 ENVIRONMENT="development"
 DYNAMO_DB_TABLE_NAME="subscription_app_development"
