corrected the name of the file

--- a/.github/workflows/prd.yml
+++ b/.github/workflows/prd.yml
@@ -13,7 +13,7 @@ env:
   ECR_REPOSITORY: artizans/webserver
   ECS_SERVICE: artizans_webserver
   ECS_CLUSTER: artizans
-  ECS_TASK_DEFINITION: aws/task-definition.json
+  ECS_TASK_DEFINITION: aws/ecs-task-definition.json
 
 jobs:
   deploy:
