change name to artizans

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,5 @@
-ADDRESS=0.0.0.0
-PORT=8080
 JWT_SECRET_KEY="asdfdf-fdsadfgr-dfsadfk-gadhakl" #whatever
-REDIS_URL="redis://subscription_redis:6379"
-ENVIRONMENT="development"
-DYNAMO_DB_TABLE_NAME="subscription_app_development"
+DYNAMO_DB_TABLE_NAME="artizans_development"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
