--- a/.github/workflows/prd.yml
+++ b/.github/workflows/prd.yml
@@ -61,9 +61,9 @@ jobs:
       env:
         PORT: 8080
         ADDRESS: 0.0.0.0
-        DYNAMO_DB_TABLE_NAME: subscription_app_production
+        DYNAMO_DB_TABLE_NAME: artizans_production
         ENVIRONMENT: production
-        REDIS_URL: redis://subscription_redis:6379
+        REDIS_URL: redis://artizans_redis:6379
       run: |
         sed -i 's|${AWS_REGION}|'${{ env.AWS_REGION }}'|g' ${{ env.ECS_TASK_DEFINITION }}
         sed -i 's|${AWS_ACCOUNT_ID}|'${{ env.AWS_ACCOUNT_ID }}'|g' ${{ env.ECS_TASK_DEFINITION }}
