--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,7 @@
 ARG RUST_VERSION=1.80.1
-ARG APP_NAME=server
+ARG APP_NAME=artizans_webserver
 
-FROM rust:${RUST_VERSION}-bookworm AS dev
+FROM rust:${RUST_VERSION}-bookworm
 
 # Use apt-get to update and install packages
 RUN apt-get update && apt-get install -y \
