--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ anyhow = "1.0.86"
 tokio = { version = "1.40.0", features = ["full"] }
 aws-config = { version= "1.5.5", features = ["behavior-version-latest"] }
 aws-sdk-dynamodb = "1.43.0"
+aws-sdk-bedrockruntime = { version = "1.47.0", features = ["behavior-version-latest"] }
 
 [dependencies.uuid]
 version = "1.10.0"
