--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ tokio = { version = "1.40.0", features = ["full"] }
 aws-config = { version= "1.5.5", features = ["behavior-version-latest"] }
 aws-sdk-dynamodb = "1.43.0"
 aws-sdk-bedrockruntime = { version = "1.47.0", features = ["behavior-version-latest"] }
+futures-util = "0.3"
 
 [dependencies.uuid]
 version = "1.10.0"
